# pm-copilot

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
desktop/: .gitignore  README.md  next.config.mjs  package.json  tailwind.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src/app/: globals.css  layout.tsx  page.tsx
desktop/src/components/: budget-bar.tsx  plan-list.tsx
desktop/src/lib/: api.ts  types.ts  utils.ts
docs/: AGENTS.md  DFD.md  MCP.md  PLAN.md  PRD.md  RESEARCH.md  RFC.md  THINK.md  USECASES.md
src/pm_copilot/: __init__.py  __main__.py  config.py
src/pm_copilot/api/: main.py
src/pm_copilot/graph/: state.py
src/pm_copilot/mcp/: server.py
tests/: test_smoke.py
