[package]
name = "pm-copilot-desktop"
version = "0.1.0"
edition = "2021"
description = "pm-copilot desktop shell"
authors = ["Rushil Kaul"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
